Aggiunti link ai social

--- a/public/src/App.css
+++ b/public/src/App.css
@@ -15,8 +15,11 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.a-icon,
+.a-icon:hover,
+.a-icon:focus,
+.a-icon:active {
+  color: white;
 }
 
 @keyframes App-logo-spin {
