--- a/public/src/App.css
+++ b/public/src/App.css
@@ -22,6 +22,13 @@
   color: white;
 }
 
+.manzinello-description {
+  font-size: 0.7em;
+  line-height: 0.7em;
+  margin-top: 5px;
+  display: block;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
