--- a/public/src/App.css
+++ b/public/src/App.css
@@ -11,6 +11,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 16px;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -24,7 +25,6 @@
 
 .manzinello-description {
   font-size: 0.7em;
-  line-height: 0.7em;
   margin-top: 5px;
   display: block;
 }
