--- a/public/src/App.css
+++ b/public/src/App.css
@@ -26,6 +26,17 @@
   color: #ccc;
 }
 
+.a-icon-facebook:hover {
+}
+.a-icon-twitter:hover {
+}
+.a-icon-github:hover {
+}
+.a-icon-instagram:hover {
+}
+.a-icon-mail:hover {
+}
+
 .manzinello-description {
   font-size: 0.7em;
   margin-top: 5px;
