--- a/src/App.css
+++ b/src/App.css
@@ -33,12 +33,8 @@
 .a-icon-twitter:hover {
   color: #b2e6f9;
 }
-.a-icon-github:hover {
-}
 .a-icon-instagram:hover {
   color: #eabfdc;
-}
-.a-icon-mail:hover {
 }
 
 .manzinello-description {
@@ -48,8 +44,20 @@
 }
 
 .manzinello-email {
-  font-size: 0.9em;
+  font-size: 0.8em;
   display: block;
+}
+
+.manzinello-email a {
+  color: white;
+  text-decoration: none;
+  border-bottom: transparent;
+  transition: border 0.3s;
+  -webkit-transition: border 0.3s;
+}
+
+.manzinello-email a:hover {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.6) !important;
 }
 
 .manzinello-icons {
