--- a/src/App.scss
+++ b/src/App.scss
@@ -46,6 +46,11 @@ p.manzinello-matteo {
   display: block;
 }
 
+.manzinello-piva {
+  color: white;
+  font-size: 0.4em;
+}
+
 .manzinello-tags {
   font-size: 0.4em;
   margin-top: 20px;
