padding in description

--- a/src/App.scss
+++ b/src/App.scss
@@ -43,6 +43,8 @@ p.manzinello-matteo {
   font-size: 0.7em;
   margin-top: 5px;
   margin-bottom: 25px;
+  padding-left: 10px;
+  padding-right: 10px;
   display: block;
 }
 
