random color in @fab-ulous github

--- a/src/App.scss
+++ b/src/App.scss
@@ -104,3 +104,7 @@ p.manzinello-matteo {
 .manzinello-avatar {
   margin-bottom: 12px;
 }
+
+#github-fabulous {
+  transition: all 0.5s !important;
+}
