wip with mailgo

--- a/src/App.scss
+++ b/src/App.scss
@@ -109,6 +109,11 @@ p.manzinello-matteo {
   margin-bottom: 12px;
 }
 
+.manzinello-avatar img {
+  border-radius: 50%;
+  border: 1px solid white;
+}
+
 #github-fabulous {
   transition: all 0.5s !important;
 }
