--- a/src/App.scss
+++ b/src/App.scss
@@ -104,14 +104,15 @@ p.manzinello-matteo {
   }
 }
 
-.writemenow-button,
 .manzinello-avatar {
   margin-bottom: 12px;
-}
-
-.manzinello-avatar img {
   border-radius: 50%;
-  border: 1px solid white;
+  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),
+    0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
+  img {
+    border-radius: 50%;
+    border: 3px solid white;
+  }
 }
 
 #github-fabulous {
