--- a/src/App.scss
+++ b/src/App.scss
@@ -25,6 +25,7 @@ code {
   text-align: center;
   // background-color: #282c34;
   min-height: 100vh;
+  min-height: -webkit-fill-available;
   display: flex;
   flex-direction: column;
   align-items: center;
