--- a/src/matteomanzinello.scss
+++ b/src/matteomanzinello.scss
@@ -43,6 +43,15 @@ p.manzinello-matteo {
 .manzinello-description {
   font-size: 0.7em;
   margin-top: 5px;
+  margin-bottom: 0px;
+  padding-left: 10px;
+  padding-right: 10px;
+  display: block;
+}
+
+.manzinello-ing {
+  font-size: 0.45em;
+  margin-top: 5px;
   margin-bottom: 25px;
   padding-left: 10px;
   padding-right: 10px;
