--- a/src/matteomanzinello.scss
+++ b/src/matteomanzinello.scss
@@ -60,7 +60,7 @@ h2.manzinello-description {
 }
 
 .manzinello-ing {
-  font-size: 0.45em;
+  font-size: 0.5em;
   margin-top: 5px;
   margin-bottom: 25px;
   padding-left: 10px;
@@ -72,6 +72,10 @@ h2.manzinello-description {
   color: white;
   font-size: 0.4em;
   margin-top: 4px;
+}
+
+.manzinello-dev {
+  margin-top: 10px;
 }
 
 .manzinello-tags {
@@ -108,7 +112,7 @@ h2.manzinello-description {
 }
 
 .manzinello-place-badge {
-  margin-top: 30px;
+  margin-top: 10px;
 }
 
 .manzinello-place-badge .ant-badge-status-text {
