--- a/src/matteomanzinello.scss
+++ b/src/matteomanzinello.scss
@@ -84,6 +84,7 @@ h2.manzinello-description {
   background-color: rgb(255, 245, 202);
   border-color: rgb(255, 245, 202);
   color: #5522fa;
+  transition-duration: 0ms !important;
 }
 
 .manzinello-hey:hover,
